# py_load_epar

./: .gitignore  .pre-commit-config.yaml  FRD_COMPLIANCE_ANALYSIS.md  LICENSE  NOTICE  README.md  pyproject.toml
docs/adrs/: 003-use-testcontainers-for-integration-testing.md
py-load-epar/: .coverage  create_test_data.py  pyproject.toml
py-load-epar/docs/adrs/: 001-use-ports-and-adapters-for-database-layer.md  002-use-pydantic-for-validation-and-settings.md
py-load-epar/src/py_load_epar/: config.py  models.py
py-load-epar/src/py_load_epar/db/: factory.py  interfaces.py  postgres.py
py-load-epar/src/py_load_epar/etl/: downloader.py  extract.py  orchestrator.py  parser.py  transform.py
py-load-epar/src/py_load_epar/spor_api/: __init__.py  client.py
py-load-epar/src/py_load_epar/storage/: local.py  s3.py
py-load-epar/tests/: conftest.py
py-load-epar/tests/db/: test_postgres_adapter.py
py-load-epar/tests/etl/: test_downloader.py  test_end_to_end.py  test_extract.py  test_orchestrator.py  test_orchestrator_v2.py  test_transform.py
py-load-epar/tests/spor_api/: test_client.py
py-load-epar/tests/storage/: test_storage_adapters.py
py-load-epar/tests/test_data/: sample_ema_data.xlsx
src/py_load_epar/: config.py  models.py
src/py_load_epar/db/: factory.py  interfaces.py  postgres.py  schema.sql
src/py_load_epar/etl/: downloader.py  extract.py  orchestrator.py  parser.py  transform.py
src/py_load_epar/spor_api/: client.py  models.py
src/py_load_epar/storage/: factory.py  interfaces.py  local.py  s3.py
tests/: conftest.py  test_config.py
tests/db/: test_postgres_adapter.py  test_postgres_failures.py
tests/etl/: test_data_integrity.py  test_data_quality.py  test_downloader.py  test_edge_cases.py  test_end_to_end.py  test_error_handling.py  test_extract.py  test_orchestrator.py  test_orchestrator_delta_load.py  test_orchestrator_document_processing.py  test_orchestrator_master_data.py  test_orchestrator_v2.py  test_parser.py  test_resilience.py  test_robustness.py  test_transform.py
tests/spor_api/: test_client.py
tests/storage/: test_storage_adapters.py  test_storage_factory.py
